<resources>
    <string name="app_name">杨卓异传</string>
    <string name="button">点击下一页</string>
    <string name="app_data1">——匿名/著</string>
    <string name="app_data2">——冰封/制作</string>
    <string name="app_data3">作者QQ：951394653</string>
    <string name="app_data4">百度ID：精灵谱尼</string>
    <string name="Text1">我觉得一切都要从</string>
    <string name="Text2">半年前的那一天开始</string>
    <string name="Text3">他把眼睛伤了过后</string>
    <string name="Text4">身体留下了残疾</string>
    <string name="Text5">而且直升也没有考好</string>
    <string name="Text6">他生病了</string>
    <string name="Text7">不能打篮球装B了</string>
    <string name="Text8">在种种压力下</string>
    <string name="Text9">他的心里就畸形了</string>
    <string name="Text10">想把自己完美的一面</string>
    <string name="Text11">表现出来</string>
    <string name="Text12">所以当时他就学编程</string>
    <string name="Text13">学物理</string>
    <string name="Text14">想装逼</string>
    <string name="Text15">然后并没有学成</string>
    <string name="Text16">这个打击加大了</string>
    <string name="Text17">他的心里畸形</string>
    <string name="Text18">时间荏苒</string>
    <string name="Text19">到了军训的时候</string>
    <string name="Text20">当时王教官叫他</string>
    <string name="Text21">上台扒衣</string>
    <string name="Text22">不对是上台表演</string>
    <string name="Text23">然后他猛然发现</string>
    <string name="Text24">他自己好有表演天赋</string>
    <string name="Text25">他感觉自己长大了</string>
    <string name="Text26">于是下定决心</string>
    <string name="Text27">要把自己优秀的一面</string>
    <string name="Text28">展现出来</string>
    <string name="Text29">于是参加了演出</string>
    <string name="Text30">可惜遭王某泼了冷水</string>
    <string name="Text31">这个激化了杨卓异</string>
    <string name="Text32">畸形的心理</string>
    <string name="Text33">让他觉得非要出人头地</string>
    <string name="Text34">让王某看看</string>
    <string name="Text35">于是他开始大量观看</string>
    <string name="Text36">exo和TF的mv</string>
    <string name="Text37">学练钢琴</string>
    <string name="Text38">最后他觉得不仅是形似</string>
    <string name="Text39">还要神似</string>
    <string name="Text40">于是他采用了一种</string>
    <string name="Text41">他认为含沙射影的说话方式</string>
    <string name="Text42">不仅很有逼格</string>
    <string name="Text43">而且感觉像是个明星</string>
    <string name="Text44">就是这样</string>
    <string name="Text45">是不是很科学</string>
    <string name="Text46"></string>
    <string name="Text47">既然你这么想了解杨卓异</string>
    <string name="action_settings">Settings</string>
</resources>
